--- a/xinxuan-member/src/main/resources/application.yml
+++ b/xinxuan-member/src/main/resources/application.yml
@@ -8,11 +8,11 @@ spring:
     url: jdbc:mysql://127.0.0.1:3306/mall_ums?userUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
     driver-class-name: com.mysql.cj.jdbc.Driver
   application:
-    name: gulimall-product
-#  cloud:
-#    nacos:
-#      discovery:
-#        server-addr: 127.0.0.1:8848
+    name: xinxuan-memeber
+  cloud:
+    nacos:
+      discovery:
+        server-addr: 127.0.0.1:8848
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
 
