--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>renren-fast</module>
         <module>renren-generator</module>
         <module>xinxuan_common</module>
+        <module>gateway</module>
     </modules>
 
 </project>
